src/test/deca/context/valid/provided/classe_extend.deca
class A {}
class B extends A {
  int x;
}
