src/test/deca/context/invalid/provided/testi02.deca
//Resultats :
//Erreur contextuelle
//Ligne 4 : int is definetely not a class
class A extends int{}